# slope-ad

./: .gitignore  .model.onnx  404.html  LICENSE  README.md  autodidax.py  index.html  mkdocs.yml  pyproject.toml  search.html  setup.py  sitemap.xml
api/: index.html  search.js
docs/: index.html  index.md  make.py  search.js  slope.html
examples/: 1.py  2.py  3.py  4.py  _grad.py  array.py  binary_reduce.py  conv.py  dot.py  export.py  grad.py  grad1.py  grad2.py  grad_has_aux.py  grad_of_grad.py  log_softmax_ex.py  metrics.py  mnist.py  mnist_minimal.py  modules.py  old_mnist.py  optim.py  padding.py  reshape.py  save.py  testarray.py
experimental/: README.md  ast.py  iree_compile_runtime.py  numpy.py  onnx.py  onnx_parse.py  onnx_shapes.py  onnx_torch.py  ort_session.py  ort_session2.py  random.py  scatter_gather.py  slicing.py  tf_gather.py  tf_gather_nd.py  tf_random.py  tf_range.py  tf_scatter_nd.py  try_iree.py  try_onnx.py  try_onnx2.py  try_onnx_pytorch.py
myad/: F.py  __init__.py  array.py  array_shape.py  core.py  eager_eval.py  forward_diff.py  ir.py  ops.py  pretty_print.py  pytrees.py  runtime.py  tensor.py  tensor_shape.py  tinynumpy.py  tracing.py  xla.py
mygrad/: __init__.py  arr.py  arrays.py  control_flow.py  evl.py  flow.py  forward.py  fwd.py  ir.py  jaxpr.py  lin.py  llops.py  par.py  partial_eval.py  pm.py  pp.py  pretty_print.py  primitives.py  pt.py  pytrees.py  reg.py  registry.py  rev.py  reverse.py  runtime.py  runtime_jvp.py  tracing.py  trc.py  utils.py  xla_jit.py
old/: control_flow.py  par.py  partial_eval.py  pytrees.py  utils.py  (+4 more)
(+274 files in other folders)
